# StoreMan

./: .env.example  README.md  alembic.ini  docker-compose.yml  requirements.txt
alembic/: env.py
app/: celery_app.py  main.py
app/api/: router.py
app/api/routers/: health.py  materials.py
app/core/: config.py  logging.py
app/crud/: __init__.py  material.py
app/models/: __init__.py  models.py
app/schemas/: __init__.py  material.py
frontend/: components.json  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/lib/: api.ts
frontend/src/lib/components/layout/: sidebar.svelte
frontend/src/lib/components/ui/: theme-toggle.svelte
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/lib/pages/: Inventory.svelte
frontend/src/lib/stores/: navigation.ts
