[package]
name = "titanwms_desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.5.0", features = ["tray-icon"] }
tauri-plugin-tray = "2.2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
